--- a/places/templates/places/maps.html
+++ b/places/templates/places/maps.html
@@ -13,7 +13,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Travel Blog</a>
+    <a class="navbar-brand" href="#">Travel Blog v1</a>
   </div>
 </nav>
 
@@ -27,7 +27,7 @@
     attribution: '© OpenStreetMap'
   }).addTo(map);
 
-  fetch("{% url 'places:places_api' %}")
+fetch("{% url 'places:places_api' %}")
     .then(r => r.json())
     .then(data => {
       data.forEach(p => {
@@ -40,7 +40,8 @@
             <p>${p.description}</p>
             <a href="${p.detail_url}" class="btn btn-sm btn-primary">View photos & details</a>
           </div>
-        ;
+        `;
+
         marker.bindPopup(popupContent);
       });
     });
